[tool.poetry]
name = "py38"
version = "0.1.0"
description = ""
authors = ["Pietro Lesci <pl487@cl.cam.ac.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.12.0"
transformers = "^4.20.1"
pytorch-lightning = "^1.6.4"
datasets = "^2.3.2"
pandas = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
